# django-load-tests

./: README.md
django-app/: Dockerfile  Makefile  docker-compose.yml  env.example  pyproject.toml
django-app/app/app/: settings.py  urls.py
django-app/app/core/: urls.py  views.py
django-app/envs/: app.env.example
django-app/scripts/: run-app.sh
locust-tests/: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
locust-tests/envs/: locust.env.example
locust-tests/scripts/: run_master.sh  run_worker.sh
locust-tests/tests/: return_true.py
