[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Yaser Khahani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
